[gd_scene load_steps=21 format=4 uid="uid://d4cq7vev1xowi"]

[ext_resource type="Script" path="res://map_levels/level1/map_level1.gd" id="1_j1dqv"]
[ext_resource type="Texture2D" uid="uid://db5d2x5sdcipr" path="res://map_levels/river_tilemap_atlas.tres" id="2_rxlgl"]
[ext_resource type="Texture2D" uid="uid://df31t0dtpu16h" path="res://sprites/tiles/Tiles.png" id="3_73peq"]
[ext_resource type="PackedScene" uid="uid://b5qs07i1uh2um" path="res://map_levels/sub_scenes/item.tscn" id="4_dapfc"]
[ext_resource type="Resource" uid="uid://cfc5ju61fi5kc" path="res://inventory/items/axe.tres" id="5_7mr62"]
[ext_resource type="PackedScene" uid="uid://bnlky7u2abek5" path="res://map_levels/sub_scenes/snow.tscn" id="6_fwclf"]
[ext_resource type="PackedScene" uid="uid://cxjtf42fqpgp5" path="res://map_levels/sub_scenes/partner.tscn" id="7_jlq1f"]
[ext_resource type="PackedScene" uid="uid://de52svsa7v0in" path="res://map_levels/sub_scenes/player.tscn" id="8_mgbvs"]
[ext_resource type="PackedScene" uid="uid://bcv6o4gblvict" path="res://inventory/inv_scenes/inventory_ui.tscn" id="9_ovmc0"]
[ext_resource type="PackedScene" uid="uid://davqj3l78lli2" path="res://journal/journal.tscn" id="10_p54oi"]
[ext_resource type="PackedScene" uid="uid://ck68v3ll5u0mf" path="res://UI/pause_menu.tscn" id="11_six8w"]
[ext_resource type="PackedScene" uid="uid://cxlf3tjnfbjtb" path="res://map_levels/sub_scenes/border.tscn" id="11_i65b4"]
[ext_resource type="PackedScene" uid="uid://drsrtqvvlldm4" path="res://map_levels/sub_scenes/tree.tscn" id="12_2duby"]
[ext_resource type="PackedScene" uid="uid://cc2bvnlef8n01" path="res://tree_chop_game/dead_tree.tscn" id="13_juv8s"]
[ext_resource type="PackedScene" uid="uid://b3brr82dyccfc" path="res://map_levels/sub_scenes/house.tscn" id="14_gnrko"]
[ext_resource type="Script" path="res://map_levels/scripts/cross_river_button.gd" id="15_34xsh"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ugstr"]
texture = ExtResource("2_rxlgl")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_e87v8"]
texture = ExtResource("3_73peq")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0

[sub_resource type="TileSet" id="TileSet_ryj3h"]
tile_size = Vector2i(64, 64)
sources/1 = SubResource("TileSetAtlasSource_e87v8")
sources/0 = SubResource("TileSetAtlasSource_ugstr")

[sub_resource type="SegmentShape2D" id="SegmentShape2D_kgvex"]
a = Vector2(295, -193)
b = Vector2(-266, 166)

[node name="MapLevel1" type="Node"]
script = ExtResource("1_j1dqv")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
z_index = -1
tile_map_data = PackedByteArray("AADz//b/AQACAAIAAAD0//b/AQAAAAAAAAD1//f/AQACAAIAAAD2//f/AQACAAIAAAD3//j/AQACAAIAAAD4//j/AQACAAIAAAD5//n/AQACAAIAAADx//H/AAAAAAAAAADx//L/AAAAAAEAAADx//P/AAAAAAIAAADx//T/AAAAAAMAAADx//X/AAAAAAQAAADx//b/AQACAAIAAADx//f/AQACAAIAAADx//j/AQACAAIAAADx//n/AQACAAIAAADx//r/AQACAAIAAADx//v/AQACAAIAAADx//z/AQACAAIAAADx//3/AQACAAIAAADx//7/AQACAAIAAADx////AQACAAIAAADx/wAAAQACAAIAAADy//H/AAABAAAAAADy//L/AAABAAEAAADy//P/AAABAAIAAADy//T/AAABAAMAAADy//X/AAABAAQAAADy//b/AQACAAIAAADy//f/AQACAAIAAADy//j/AQACAAIAAADy//n/AQACAAIAAADy//r/AQABAAEAAADy//v/AQACAAIAAADy//z/AQAAAAEAAADy//3/AQAAAAEAAADy//7/AQACAAIAAADy////AQACAAIAAADy/wAAAQACAAIAAADz//H/AAACAAAAAADz//L/AAACAAEAAADz//P/AAACAAIAAADz//T/AAACAAMAAADz//X/AAACAAQAAADz//f/AQACAAIAAADz//j/AQACAAIAAADz//n/AQAAAAEAAADz//r/AQACAAIAAADz//v/AQABAAEAAADz//z/AQACAAIAAADz//3/AQACAAIAAADz//7/AQACAAIAAADz////AQACAAIAAADz/wAAAQACAAIAAAD0//H/AAADAAAAAAD0//L/AAADAAEAAAD0//P/AAADAAIAAAD0//T/AAADAAMAAAD0//X/AAADAAQAAAD0//f/AQACAAIAAAD0//j/AQACAAIAAAD0//n/AQACAAIAAAD0//r/AQACAAIAAAD0//v/AQACAAIAAAD0//z/AQACAAIAAAD0//3/AQACAAIAAAD0//7/AQACAAIAAAD0////AQACAAIAAAD0/wAAAQACAAIAAAD1//H/AAAEAAAAAAD1//L/AAAEAAEAAAD1//P/AAAEAAIAAAD1//T/AAAEAAMAAAD1//X/AAAEAAQAAAD1//b/AQACAAIAAAD1//j/AQACAAIAAAD1//n/AQACAAIAAAD1//r/AQACAAIAAAD1//v/AQACAAIAAAD1//z/AQACAAIAAAD1//3/AQACAAIAAAD1//7/AQACAAIAAAD1////AQACAAIAAAD1/wAAAQACAAIAAAD2//H/AAAFAAAAAAD2//L/AAAFAAEAAAD2//P/AAAFAAIAAAD2//T/AAAFAAMAAAD2//X/AAAFAAQAAAD2//b/AQACAAIAAAD2//j/AQACAAIAAAD2//n/AQACAAIAAAD2//r/AQACAAIAAAD2//v/AQACAAIAAAD2//z/AQACAAIAAAD2//3/AQACAAIAAAD2//7/AQACAAIAAAD2////AQACAAIAAAD2/wAAAQACAAIAAAD3//H/AAAGAAAAAAD3//L/AAAGAAEAAAD3//P/AAAGAAIAAAD3//T/AAAGAAMAAAD3//X/AAAGAAQAAAD3//b/AQACAAIAAAD3//f/AQACAAIAAAD3//n/AQACAAIAAAD3//r/AQACAAIAAAD3//v/AQACAAIAAAD3//z/AQACAAIAAAD3//3/AQACAAIAAAD3//7/AQACAAIAAAD3////AQACAAIAAAD3/wAAAQACAAIAAAD4//H/AQACAAIAAAD4//L/AQACAAIAAAD4//P/AQACAAIAAAD4//T/AQACAAIAAAD4//X/AQACAAIAAAD4//b/AQACAAIAAAD4//f/AQACAAIAAAD4//n/AQACAAIAAAD4//r/AQACAAIAAAD4//v/AQACAAIAAAD4//z/AQACAAIAAAD4//3/AQACAAIAAAD4//7/AQACAAIAAAD4////AQACAAIAAAD4/wAAAQABAAAAAAD5//H/AQACAAIAAAD5//L/AQACAAIAAAD5//P/AQACAAIAAAD5//T/AQACAAIAAAD5//X/AQACAAIAAAD5//b/AQACAAIAAAD5//f/AQACAAIAAAD5//j/AQACAAIAAAD5//v/AQACAAIAAAD5//z/AQACAAIAAAD5//3/AQACAAIAAAD5//7/AQAAAAIAAAD5////AQAAAAIAAAD5/wAAAQAAAAIAAAD6//H/AQACAAIAAAD6//L/AQACAAIAAAD6//P/AQACAAIAAAD6//T/AQACAAIAAAD6//X/AQACAAIAAAD6//b/AQACAAIAAAD6//f/AQACAAIAAAD6//j/AQACAAIAAAD6//n/AQACAAIAAAD6//r/AQACAAIAAAD6//v/AQACAAIAAAD6//z/AQACAAIAAAD6//3/AQACAAIAAAD6//7/AQACAAIAAAD6////AQACAAIAAAD6/wAAAQACAAIAAAD7//H/AQACAAIAAAD7//L/AQACAAIAAAD7//P/AQACAAIAAAD7//T/AQACAAIAAAD7//X/AQACAAIAAAD7//b/AQACAAIAAAD7//f/AQACAAIAAAD7//j/AQACAAIAAAD7//n/AQACAAIAAAD7//r/AQACAAIAAAD7//v/AQACAAIAAAD7//z/AQACAAIAAAD7//3/AQACAAIAAAD7//7/AQACAAIAAAD7////AQACAAIAAAD7/wAAAQACAAIAAAD8//H/AQACAAIAAAD8//L/AQACAAIAAAD8//P/AQACAAIAAAD8//T/AQACAAIAAAD8//X/AQACAAIAAAD8//b/AQACAAIAAAD8//f/AQACAAIAAAD8//j/AQACAAIAAAD8//n/AQACAAIAAAD8//r/AQACAAIAAAD8//v/AQACAAIAAAD8//z/AQACAAIAAAD8//3/AQACAAIAAAD8//7/AQACAAIAAAD8////AQACAAIAAAD8/wAAAQACAAIAAAD9//H/AQACAAIAAAD9//L/AQACAAIAAAD9//P/AQACAAIAAAD9//T/AQACAAIAAAD9//X/AQACAAIAAAD9//b/AQACAAIAAAD9//f/AQACAAIAAAD9//j/AQACAAIAAAD9//n/AQACAAIAAAD9//r/AQACAAIAAAD9//v/AQACAAIAAAD9//z/AQAAAAAAAAD9//3/AQACAAIAAAD9//7/AQACAAIAAAD9////AQACAAIAAAD9/wAAAQACAAIAAAD+//H/AQACAAIAAAD+//L/AQACAAIAAAD+//P/AQACAAIAAAD+//T/AQACAAIAAAD+//X/AQACAAIAAAD+//b/AQACAAIAAAD+//f/AQACAAIAAAD+//j/AQACAAIAAAD+//n/AQACAAIAAAD+//r/AQACAAIAAAD+//v/AQACAAIAAAD+//z/AQACAAIAAAD+//3/AQACAAIAAAD+//7/AQACAAIAAAD+////AQACAAIAAAD+/wAAAQACAAIAAAD///H/AQACAAIAAAD///L/AQACAAIAAAD///P/AQACAAIAAAD///T/AQACAAIAAAD///X/AQACAAIAAAD///b/AQACAAIAAAD///f/AQACAAIAAAD///j/AQACAAIAAAD///n/AQACAAIAAAD///r/AQACAAIAAAD///v/AQACAAIAAAD///z/AQACAAIAAAD///3/AQABAAEAAAD///7/AQACAAIAAAD/////AQACAAIAAAD//wAAAQADAAAAAAAAAPH/AQACAAIAAAAAAPL/AQACAAIAAAAAAPP/AQACAAIAAAAAAPT/AQACAAIAAAAAAPX/AQACAAIAAAAAAPb/AQACAAIAAAAAAPf/AQACAAIAAAAAAPj/AQACAAIAAAAAAPn/AQACAAIAAAAAAPr/AQACAAIAAAAAAPv/AQACAAIAAAAAAPz/AQACAAIAAAAAAP3/AQACAAIAAAAAAP7/AQACAAIAAAAAAP//AQACAAIAAAAAAAAAAQACAAIAAAABAPH/AQACAAIAAAABAPL/AQACAAIAAAABAPP/AQACAAIAAAABAPT/AQACAAIAAAABAPX/AQACAAIAAAABAPb/AQACAAIAAAABAPf/AQACAAIAAAABAPj/AQACAAIAAAABAPr/AQACAAIAAAABAPv/AQACAAIAAAABAPz/AQACAAIAAAABAP3/AQACAAIAAAABAP7/AQACAAIAAAABAP//AQACAAIAAAABAAAAAQACAAIAAAACAPH/AQACAAIAAAACAPL/AQACAAIAAAACAPP/AQACAAIAAAACAPT/AQACAAIAAAACAPX/AQACAAIAAAACAPb/AQACAAIAAAACAPf/AQACAAIAAAACAPj/AQACAAIAAAACAPn/AQACAAIAAAACAPr/AQACAAIAAAACAPv/AQACAAIAAAACAPz/AQACAAIAAAACAP3/AQACAAIAAAACAP7/AQACAAIAAAACAP//AQACAAIAAAACAAAAAQACAAIAAAADAPH/AQACAAIAAAADAPL/AQACAAIAAAADAPP/AQACAAIAAAADAPT/AQACAAIAAAADAPX/AQACAAIAAAADAPb/AQACAAIAAAADAPf/AQACAAIAAAADAPj/AQACAAIAAAADAPn/AQACAAIAAAADAPr/AQACAAIAAAADAPv/AQACAAIAAAADAPz/AQADAAMAAAADAP3/AQACAAIAAAADAP7/AQACAAIAAAADAP//AQACAAIAAAADAAAAAQAAAAAAAAAEAPH/AQACAAIAAAAEAPL/AQACAAIAAAAEAPP/AQACAAIAAAAEAPT/AQACAAIAAAAEAPX/AQACAAIAAAAEAPb/AQACAAIAAAAEAPf/AQACAAIAAAAEAPj/AQACAAIAAAAEAPr/AQACAAIAAAAEAPv/AQACAAIAAAAEAPz/AQACAAIAAAAEAP3/AQACAAIAAAAEAP7/AQACAAIAAAAEAP//AQACAAIAAAAEAAAAAQACAAIAAAAFAPH/AQACAAIAAAAFAPL/AQACAAIAAAAFAPP/AQACAAIAAAAFAPT/AQACAAIAAAAFAPX/AQACAAIAAAAFAPb/AQACAAIAAAAFAPf/AQACAAIAAAAFAPj/AQACAAIAAAAFAPn/AQACAAIAAAAFAPr/AQACAAIAAAAFAPv/AQACAAIAAAAFAPz/AQACAAIAAAAFAP3/AQACAAIAAAAFAP7/AQACAAIAAAAFAP//AQACAAIAAAAFAAAAAQACAAIAAAAGAPH/AQACAAIAAAAGAPL/AQACAAIAAAAGAPP/AQACAAIAAAAGAPT/AQACAAIAAAAGAPX/AQACAAIAAAAGAPb/AQACAAIAAAAGAPf/AQACAAIAAAAGAPn/AQACAAIAAAAGAPr/AQACAAIAAAAGAPv/AQACAAIAAAAGAPz/AQACAAIAAAAGAP3/AQACAAIAAAAGAP7/AQACAAIAAAAGAP//AQACAAIAAAAGAAAAAQACAAIAAAAHAPH/AQACAAIAAAAHAPL/AQACAAIAAAAHAPP/AQACAAIAAAAHAPT/AQACAAIAAAAHAPX/AQACAAIAAAAHAPb/AQACAAIAAAAHAPf/AQACAAIAAAAHAPj/AQACAAIAAAAHAPn/AQACAAIAAAAHAPr/AQACAAIAAAAHAPv/AQACAAIAAAAHAPz/AQACAAIAAAAHAP3/AQACAAIAAAAHAP7/AQACAAIAAAAHAP//AQABAAAAAAAHAAAAAQACAAIAAAAIAPH/AQACAAIAAAAIAPL/AQACAAIAAAAIAPP/AQACAAIAAAAIAPT/AQACAAIAAAAIAPX/AQACAAIAAAAIAPb/AQACAAIAAAAIAPf/AQACAAIAAAAIAPj/AQACAAIAAAAIAPn/AQACAAIAAAAIAPr/AQACAAIAAAAIAPv/AQACAAIAAAAIAPz/AQACAAEAAAAIAP3/AQACAAIAAAAIAP7/AQACAAIAAAAIAP//AQACAAIAAAAIAAAAAQACAAIAAAAJAPH/AQACAAIAAAAJAPL/AQACAAIAAAAJAPP/AQACAAIAAAAJAPT/AQACAAIAAAAJAPX/AQACAAIAAAAJAPb/AQACAAIAAAAJAPf/AQACAAIAAAAJAPj/AQACAAIAAAAJAPn/AQACAAIAAAAJAPr/AQACAAIAAAAJAPv/AQACAAIAAAAJAPz/AQACAAIAAAAJAP3/AQACAAIAAAAJAP7/AQACAAIAAAAJAP//AQACAAIAAAAJAAAAAQACAAIAAAAKAPH/AQACAAIAAAAKAPL/AQACAAIAAAAKAPP/AQACAAIAAAAKAPT/AQACAAIAAAAKAPX/AQACAAIAAAAKAPb/AQACAAIAAAAKAPf/AQACAAIAAAAKAPj/AQACAAIAAAAKAPn/AQACAAIAAAAKAPr/AQACAAIAAAAKAPv/AQACAAIAAAAKAP3/AQAAAAEAAAAKAP7/AQACAAIAAAAKAP//AQACAAIAAAAKAAAAAQACAAIAAAALAPH/AQACAAIAAAALAPL/AQACAAIAAAALAPP/AQACAAIAAAALAPT/AQACAAIAAAALAPX/AQACAAIAAAALAPb/AQACAAIAAAALAPf/AQACAAIAAAALAPj/AQACAAIAAAALAPn/AQACAAIAAAALAPr/AQACAAIAAAALAPv/AQACAAIAAAALAPz/AQACAAIAAAALAP3/AQACAAIAAAALAP7/AQACAAIAAAALAP//AQACAAIAAAALAAAAAQACAAIAAAAMAPH/AQACAAIAAAAMAPL/AQACAAIAAAAMAPP/AQACAAIAAAAMAPT/AQACAAIAAAAMAPX/AQACAAIAAAAMAPb/AQACAAIAAAAMAPf/AQACAAIAAAAMAPj/AQACAAIAAAAMAPn/AQACAAIAAAAMAPr/AQACAAIAAAAMAPv/AQACAAIAAAAMAPz/AQACAAIAAAAMAP3/AQACAAIAAAAMAP7/AQACAAIAAAAMAP//AQACAAIAAAAMAAAAAQACAAAAAAANAPH/AQACAAIAAAANAPL/AQACAAIAAAANAPP/AQACAAIAAAANAPT/AQACAAIAAAANAPX/AQACAAIAAAANAPb/AQACAAIAAAANAPf/AQACAAIAAAANAPj/AQACAAIAAAANAPn/AQACAAIAAAANAPr/AQACAAIAAAANAPv/AQACAAIAAAANAPz/AQACAAIAAAANAP3/AQACAAIAAAANAP7/AQACAAIAAAANAP//AQACAAIAAAANAAAAAQADAAAAAAAOAPH/AQACAAIAAAAOAPL/AQACAAIAAAAOAPP/AQACAAIAAAAOAPT/AQACAAIAAAAOAPX/AQACAAIAAAAOAPb/AQACAAIAAAAOAPf/AQACAAIAAAAOAPj/AQACAAIAAAAOAPn/AQACAAIAAAAOAPr/AQACAAIAAAAOAPv/AQACAAIAAAAOAPz/AQACAAIAAAAOAP3/AQACAAIAAAAOAP7/AQACAAIAAAAOAP//AQACAAIAAAAOAAAAAQACAAIAAAAGAPj/AQACAAIAAAABAPn/AQAAAAEAAADx/wEAAQACAAIAAADx/wIAAQACAAIAAADx/wMAAQACAAIAAADx/wQAAQACAAIAAADx/wUAAQACAAIAAADx/wYAAQACAAIAAADx/wcAAQACAAIAAADx/wgAAQACAAIAAADx/wkAAQACAAIAAADx/woAAQACAAIAAADx/wsAAQACAAIAAADx/wwAAQACAAIAAADy/wEAAQACAAIAAADy/wIAAQACAAIAAADy/wMAAQACAAIAAADy/wQAAQACAAIAAADy/wUAAQACAAIAAADy/wYAAQACAAIAAADy/wcAAQACAAIAAADy/wgAAQADAAMAAGDy/wkAAQACAAIAAADy/woAAQACAAIAAADy/wsAAQACAAIAAADy/wwAAQACAAIAAADz/wEAAQACAAIAAADz/wIAAQACAAIAAADz/wMAAQACAAIAAADz/wQAAQADAAMAAADz/wUAAQACAAIAAADz/wYAAQACAAIAAADz/wcAAQACAAIAAADz/wgAAQACAAIAAADz/wkAAQACAAIAAADz/woAAQACAAIAAADz/wsAAQACAAIAAADz/wwAAQACAAIAAAD0/wEAAQACAAIAAAD0/wIAAQACAAIAAAD0/wMAAQACAAIAAAD0/wQAAQACAAIAAAD0/wUAAQACAAIAAAD0/wYAAQACAAIAAAD0/wcAAQADAAMAAAD0/wgAAQACAAIAAAD0/wkAAQACAAIAAAD0/woAAQADAAMAAGD0/wsAAQACAAIAAAD0/wwAAQACAAIAAAD1/wEAAQACAAIAAAD1/wIAAQACAAIAAAD1/wMAAQACAAIAAAD1/wQAAQACAAIAAAD1/wUAAQADAAMAAAD1/wYAAQADAAMAAAD1/wcAAQADAAMAAAD1/wgAAQACAAIAAAD1/wkAAQACAAIAAAD1/woAAQACAAIAAAD1/wsAAQACAAIAAAD1/wwAAQACAAIAAAD2/wEAAQACAAIAAAD2/wIAAQABAAAAAAD2/wMAAQACAAIAAAD2/wQAAQACAAIAAAD2/wUAAQACAAIAAAD2/wYAAQADAAMAAAD2/wcAAQADAAMAAGD2/wgAAQACAAIAAAD2/wkAAQACAAIAAAD2/woAAQACAAIAAAD2/wsAAQACAAIAAAD2/wwAAQACAAIAAAD3/wEAAQACAAIAAAD3/wIAAQACAAIAAAD3/wMAAQACAAIAAAD3/wQAAQADAAMAAAD3/wUAAQADAAMAAAD3/wYAAQADAAMAAAD3/wcAAQADAAMAAAD3/wgAAQACAAIAAAD3/wkAAQACAAIAAAD3/woAAQACAAIAAAD3/wsAAQACAAIAAAD3/wwAAQADAAMAAGD4/wEAAQACAAIAAAD4/wIAAQADAAMAAAD4/wMAAQACAAIAAAD4/wUAAQACAAIAAAD4/wYAAQADAAMAAAD4/wcAAQACAAIAAAD4/wgAAQACAAIAAAD4/wkAAQACAAMAAAD4/woAAQACAAIAAAD4/wsAAQADAAMAAGD4/wwAAQACAAIAAAD5/wEAAQAAAAIAAAD5/wIAAQAAAAMAAAD5/wMAAQACAAIAAAD5/wUAAQACAAIAAAD5/wYAAQADAAMAAGD5/wcAAQACAAIAAAD5/wgAAQACAAIAAAD5/wkAAQACAAIAAAD5/woAAQACAAIAAAD5/wsAAQACAAIAAAD5/wwAAQACAAIAAAD6/wEAAQADAAMAAAD6/wIAAQAAAAIAAFD6/wMAAQADAAMAAAD6/wUAAQADAAEAAAD6/wYAAQADAAMAAAD6/wcAAQACAAIAAAD6/wgAAQADAAMAAAD6/wkAAQACAAIAAAD6/woAAQACAAIAAAD6/wsAAQACAAIAAAD6/wwAAQACAAIAAAD7/wEAAQACAAIAAAD7/wIAAQAAAAIAAFD7/wMAAQACAAIAAAD7/wUAAQADAAEAAAD7/wYAAQACAAIAAAD7/wcAAQACAAIAAAD7/wgAAQACAAIAAAD7/wkAAQACAAIAAAD7/woAAQACAAIAAAD7/wsAAQACAAIAAAD7/wwAAQACAAIAAAD8/wEAAQACAAIAAAD8/wIAAQAAAAIAAFD8/wQAAQACAAIAAAD8/wUAAQADAAEAAAD8/wYAAQACAAIAAAD8/wcAAQACAAIAAAD8/wgAAQACAAIAAAD8/wkAAQACAAIAAAD8/woAAQACAAIAAAD8/wsAAQACAAIAAAD8/wwAAQACAAIAAAD9/wEAAQACAAIAAAD9/wIAAQAAAAIAAFD9/wQAAQADAAEAAAD9/wUAAQADAAMAAAD9/wYAAQACAAIAAAD9/wcAAQACAAIAAAD9/wgAAQACAAIAAAD9/wkAAQACAAIAAAD9/woAAQACAAIAAAD9/wsAAQACAAIAAAD9/wwAAQACAAIAAAD+/wEAAQACAAIAAAD+/wIAAQAAAAIAAFD+/wQAAQADAAEAAAD+/wUAAQADAAMAAAD+/wYAAQACAAIAAAD+/wcAAQACAAIAAAD+/wgAAQACAAIAAAD+/wkAAQACAAIAAAD+/woAAQACAAIAAAD+/wsAAQACAAIAAAD+/wwAAQACAAIAAAD//wEAAQACAAIAAAD//wIAAQABAAIAAFD//wQAAQADAAEAAAD//wUAAQACAAIAAAD//wYAAQACAAIAAAD//wcAAQACAAIAAAD//wgAAQACAAIAAAD//wkAAQACAAIAAAD//woAAQACAAIAAAD//wsAAQACAAIAAAD//wwAAQACAAIAAAAAAAEAAQACAAIAAAAAAAIAAQACAAIAAAAAAAQAAQADAAEAAAAAAAUAAQACAAIAAAAAAAYAAQACAAIAAAAAAAcAAQACAAIAAAAAAAgAAQACAAIAAAAAAAkAAQACAAIAAAAAAAoAAQACAAIAAAAAAAsAAQACAAIAAAAAAAwAAQACAAIAAAABAAEAAQACAAIAAAABAAIAAQACAAIAAAABAAQAAQADAAEAAAABAAUAAQACAAIAAAABAAYAAQADAAMAAAABAAcAAQADAAMAAAABAAgAAQACAAIAAAABAAkAAQACAAIAAAABAAoAAQACAAIAAAABAAsAAQACAAIAAAABAAwAAQACAAIAAAACAAEAAQACAAIAAAACAAIAAQACAAIAAAACAAQAAQACAAIAAAACAAUAAQACAAIAAAACAAYAAQADAAMAAAACAAcAAQACAAIAAAACAAgAAQACAAIAAAACAAkAAQACAAIAAAACAAoAAQACAAMAAAACAAsAAQACAAIAAAACAAwAAQACAAIAAAADAAEAAQACAAIAAAADAAMAAQADAAEAAAADAAQAAQACAAIAAAADAAUAAQACAAIAAAADAAYAAQACAAIAAAADAAcAAQACAAIAAAADAAgAAQACAAIAAAADAAkAAQACAAIAAAADAAoAAQACAAIAAAADAAsAAQACAAMAAAADAAwAAQACAAIAAAAEAAEAAQACAAIAAAAEAAMAAQADAAEAAAAEAAQAAQACAAIAAAAEAAUAAQACAAIAAAAEAAYAAQACAAIAAAAEAAcAAQACAAIAAAAEAAgAAQACAAIAAAAEAAkAAQADAAMAAAAEAAoAAQACAAIAAAAEAAsAAQACAAIAAAAEAAwAAQACAAIAAAAFAAEAAQACAAIAAAAFAAMAAQADAAEAAAAFAAQAAQACAAIAAAAFAAUAAQACAAIAAAAFAAYAAQACAAIAAAAFAAcAAQACAAIAAAAFAAgAAQACAAIAAAAFAAkAAQACAAIAAAAFAAoAAQACAAIAAAAFAAsAAQADAAMAAFAFAAwAAQACAAIAAAAGAAEAAQACAAIAAAAGAAMAAQACAAIAAAAGAAQAAQACAAIAAAAGAAUAAQACAAIAAAAGAAYAAQACAAIAAAAGAAcAAQACAAIAAAAGAAgAAQACAAIAAAAGAAkAAQACAAIAAAAGAAoAAQACAAIAAAAGAAsAAQACAAIAAAAGAAwAAQACAAIAAAAHAAEAAQACAAIAAAAHAAMAAQACAAIAAAAHAAQAAQACAAIAAAAHAAUAAQACAAIAAAAHAAYAAQACAAIAAAAHAAcAAQACAAIAAAAHAAgAAQACAAIAAAAHAAkAAQACAAIAAAAHAAoAAQACAAIAAAAHAAsAAQACAAMAAAAHAAwAAQACAAIAAAAIAAEAAQACAAIAAAAIAAMAAQACAAIAAAAIAAQAAQACAAIAAAAIAAUAAQACAAIAAAAIAAYAAQACAAIAAAAIAAcAAQACAAIAAAAIAAgAAQADAAMAAAAIAAkAAQACAAIAAAAIAAoAAQACAAIAAAAIAAsAAQACAAIAAAAIAAwAAQACAAIAAAAJAAEAAQACAAIAAAAJAAMAAQACAAIAAAAJAAQAAQACAAIAAAAJAAUAAQACAAIAAAAJAAYAAQACAAIAAAAJAAcAAQACAAIAAAAJAAgAAQACAAIAAAAJAAkAAQACAAIAAAAJAAoAAQACAAIAAAAJAAsAAQACAAIAAAAJAAwAAQACAAIAAAAKAAIAAQADAAEAAAAKAAMAAQACAAIAAAAKAAQAAQACAAIAAAAKAAUAAQADAAMAAAAKAAYAAQACAAIAAAAKAAcAAQACAAIAAAAKAAgAAQACAAIAAAAKAAkAAQACAAIAAAAKAAoAAQACAAIAAAAKAAsAAQACAAIAAAAKAAwAAQACAAMAAAALAAIAAQACAAIAAAALAAMAAQACAAIAAAALAAQAAQACAAEAAAALAAUAAQACAAIAAAALAAYAAQACAAIAAAALAAcAAQABAAEAAAALAAgAAQACAAIAAAALAAkAAQACAAIAAAALAAoAAQACAAIAAAALAAsAAQACAAMAAAALAAwAAQACAAIAAAAMAAIAAQACAAIAAAAMAAMAAQACAAIAAAAMAAQAAQACAAIAAAAMAAUAAQABAAEAAAAMAAYAAQACAAIAAAAMAAcAAQACAAIAAAAMAAgAAQACAAIAAAAMAAkAAQACAAIAAAAMAAoAAQACAAIAAAAMAAsAAQACAAIAAAAMAAwAAQACAAIAAAANAAIAAQACAAIAAAANAAMAAQACAAIAAAANAAQAAQACAAIAAAANAAUAAQACAAIAAAANAAYAAQACAAIAAAANAAcAAQACAAIAAAANAAgAAQACAAIAAAANAAkAAQACAAIAAAANAAoAAQACAAIAAAANAAsAAQACAAMAAAANAAwAAQADAAMAAFAOAAEAAQACAAIAAAAOAAIAAQACAAIAAAAOAAMAAQACAAIAAAAOAAQAAQACAAIAAAAOAAUAAQACAAIAAAAOAAYAAQACAAIAAAAOAAcAAQACAAIAAAAOAAgAAQACAAIAAAAOAAkAAQACAAIAAAAOAAoAAQACAAIAAAAOAAsAAQACAAIAAAAOAAwAAQACAAIAAADx/w0AAQACAAIAAADx/w4AAQACAAIAAADy/w0AAQACAAIAAADy/w4AAQACAAIAAADz/w0AAQACAAIAAADz/w4AAQACAAIAAAD0/w0AAQACAAIAAAD0/w4AAQACAAIAAAD1/w0AAQACAAIAAAD1/w4AAQACAAIAAAD2/w0AAQACAAIAAAD2/w4AAQACAAIAAAD3/w0AAQACAAIAAAD3/w4AAQACAAIAAAD4/w0AAQACAAIAAAD4/w4AAQACAAIAAAD5/w0AAQACAAIAAAD5/w4AAQACAAIAAAD6/w0AAQACAAIAAAD6/w4AAQACAAIAAAD7/w0AAQACAAIAAAD7/w4AAQACAAIAAAD8/w0AAQACAAIAAAD8/w4AAQACAAIAAAD9/w0AAQACAAIAAAD9/w4AAQACAAIAAAD+/w0AAQACAAIAAAD+/w4AAQACAAIAAAD//w0AAQACAAIAAAD//w4AAQACAAIAAAAAAA0AAQACAAIAAAAAAA4AAQACAAIAAAABAA0AAQACAAIAAAABAA4AAQACAAIAAAACAA0AAQACAAIAAAACAA4AAQACAAIAAAADAA0AAQACAAIAAAADAA4AAQACAAIAAAAEAA0AAQACAAIAAAAEAA4AAQACAAIAAAAFAA0AAQACAAIAAAAFAA4AAQACAAIAAAAGAA0AAQACAAIAAAAGAA4AAQACAAIAAAAHAA0AAQACAAIAAAAHAA4AAQACAAIAAAAIAA0AAQACAAIAAAAIAA4AAQACAAIAAAAJAA0AAQACAAIAAAAJAA4AAQACAAIAAAAKAA0AAQACAAIAAAAKAA4AAQACAAIAAAALAA0AAQACAAIAAAALAA4AAQACAAIAAAAMAA0AAQACAAIAAAAMAA4AAQACAAIAAAANAA0AAQACAAIAAAANAA4AAQACAAIAAAAOAA0AAQACAAIAAAAOAA4AAQACAAIAAAD4/wQAAQADAAMAAAANAAEAAQADAAEAAAAMAAEAAQACAAEAAAALAAEAAQADAAEAAAAKAAEAAQACAAIAAAAJAAIAAQADAAEAAAAIAAIAAQADAAEAAAAHAAIAAQADAAEAAAAGAAIAAQADAAEAAAAFAAIAAQACAAIAAAAEAAIAAQACAAIAAAADAAIAAQACAAIAAAACAAMAAQADAAEAAAABAAMAAQACAAIAAAAAAAMAAQACAAIAAAD//wMAAQACAAIAAAD+/wMAAQACAAIAAAD9/wMAAQACAAIAAAD8/wMAAQACAAIAAAD7/wQAAQACAAIAAAD6/wQAAQACAAIAAAD5/wQAAQADAAMAAAD5//r/AQACAAIAAAAEAPn/AQAAAAAAAAAKAPz/AQAAAAAAAAA=")
tile_set = SubResource("TileSet_ryj3h")

[node name="Item" parent="." instance=ExtResource("4_dapfc")]
z_index = 100
position = Vector2(683, -596)
scale = Vector2(0.5, 0.5)
item = ExtResource("5_7mr62")

[node name="Snow" parent="." instance=ExtResource("6_fwclf")]
position = Vector2(480, -970)
scale = Vector2(2, 1)
amount = 1200

[node name="Partner" parent="." node_paths=PackedStringArray("player") instance=ExtResource("7_jlq1f")]
player = NodePath("../Player")
distance_treshold = 100.0
distance_leeway = 200.0

[node name="Player" parent="." instance=ExtResource("8_mgbvs")]
position = Vector2(76, 28)

[node name="Camera2D" type="Camera2D" parent="Player"]
zoom = Vector2(1.5, 1.5)
limit_left = -960
limit_top = -960
limit_right = 960
limit_bottom = 960

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Inventory_UI" parent="CanvasLayer" instance=ExtResource("9_ovmc0")]
offset_left = 1380.0
offset_top = 940.0
offset_right = 1481.0
offset_bottom = 963.0
scale = Vector2(5, 5)

[node name="Book" parent="CanvasLayer" instance=ExtResource("10_p54oi")]
visible = false
offset_left = 350.0
offset_top = 151.0
offset_right = 177.0
offset_bottom = 81.0
scale = Vector2(0.7, 0.7)

[node name="PauseMenu" parent="CanvasLayer" instance=ExtResource("11_six8w")]

[node name="Borders" type="Node" parent="."]

[node name="Border" parent="Borders" instance=ExtResource("11_i65b4")]
position = Vector2(0, 960)
scale = Vector2(10, 9)
collision_layer = 3

[node name="Border2" parent="Borders" instance=ExtResource("11_i65b4")]
position = Vector2(-960, 0)
rotation = 1.5708
scale = Vector2(10, 9)

[node name="Border3" parent="Borders" instance=ExtResource("11_i65b4")]
position = Vector2(0, -960)
rotation = 3.14159
scale = Vector2(10, 9)

[node name="Border4" parent="Borders" instance=ExtResource("11_i65b4")]
position = Vector2(960, 0)
rotation = -1.5708
scale = Vector2(10, 9)

[node name="Trees" type="Node2D" parent="."]

[node name="tree" parent="Trees" instance=ExtResource("12_2duby")]
position = Vector2(387, -30)

[node name="tree2" parent="Trees" instance=ExtResource("12_2duby")]
position = Vector2(-269, 6)

[node name="tree3" parent="Trees" instance=ExtResource("12_2duby")]
position = Vector2(-150, 329)

[node name="tree4" parent="Trees" instance=ExtResource("12_2duby")]
position = Vector2(-442, 323)

[node name="tree5" parent="Trees" instance=ExtResource("12_2duby")]
position = Vector2(-718, 241)

[node name="tree6" parent="Trees" instance=ExtResource("12_2duby")]
position = Vector2(621, 633)

[node name="tree7" parent="Trees" instance=ExtResource("12_2duby")]
position = Vector2(-612, 651)

[node name="tree8" parent="Trees" instance=ExtResource("12_2duby")]
position = Vector2(-82, 651)

[node name="tree9" parent="Trees" instance=ExtResource("12_2duby")]
position = Vector2(359, 777)

[node name="DeadTree" parent="Trees" node_paths=PackedStringArray("player") instance=ExtResource("13_juv8s")]
position = Vector2(-681, -796)
player = NodePath("../../Player")

[node name="House" parent="." instance=ExtResource("14_gnrko")]
position = Vector2(502, -606)

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(-748, -799)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource("SegmentShape2D_kgvex")

[node name="CrossRiverButton" type="Button" parent="."]
visible = false
offset_left = -913.0
offset_top = -916.0
offset_right = -792.0
offset_bottom = -880.0
text = "Cross the river"
script = ExtResource("15_34xsh")

[connection signal="minigame_solved" from="Trees/DeadTree" to="." method="_on_dead_tree_minigame_solved"]
[connection signal="minigame_solved" from="Trees/DeadTree" to="CrossRiverButton" method="_on_dead_tree_minigame_solved"]
[connection signal="play_minigame" from="Trees/DeadTree" to="." method="_on_dead_tree_play_minigame"]
[connection signal="pressed" from="CrossRiverButton" to="." method="_on_cross_river_button_pressed"]
